@@ -574,10 +574,10 @@ zone_add_rr(zone_type* zone, ldns_rr* rr, int do_stats)
     }
     record = rrset_lookup_rr(rrset, rr);
 
-    if (record && ldns_rr_ttl(rr) != ldns_rr_ttl(record->rr))
-        record = NULL;
+    uint32_t ttl_rr = ldns_rr_ttl(rr);
+    uint32_t ttl_rrset = rrset_lookup_ttl(rrset, ttl_rr);
 
-    if (record) {
+    if (record && ttl_rr == ttl_rrset && ttl_rr == ldns_rr_ttl(record->rr)) {
         record->is_added = 1; /* already exists, just mark added */
         record->is_removed = 0; /* unset is_removed */
         return ODS_STATUS_UNCHANGED;
@@ -586,7 +586,15 @@ zone_add_rr(zone_type* zone, ldns_rr* rr, int do_stats)
         ods_log_assert(record);
         ods_log_assert(record->rr);
         ods_log_assert(record->is_added);
-        if (ldns_rr_ttl(rr) != ldns_rr_ttl(rrset->rrs[0].rr)) {
+        if (ttl_rr != ttl_rrset) {
+            /* YBS: NOTICE! We are correcting the TTLs to ensure every RR in the 
+             * RRSET has the same TTL. Otherwise signatures go BOGUS. While
+             * this works it is **NOT** the correct place to do so. We SHOULD
+             * only correcting the records for the outgoing zone (so only 
+             * correct them while signing). However, the datastructure currently 
+             * in use can not make a distinction between incoming and outgoing.
+             * As a result IXFR's might fail when trying to remove a record
+             * that has its TTL fixed. */
             str = ldns_rr2str(rr);
             str[(strlen(str)) - 1] = '\0';
             for (i = 0; i < strlen(str); i++) {
@@ -594,9 +602,9 @@ zone_add_rr(zone_type* zone, ldns_rr* rr, int do_stats)
                     str[i] = ' ';
                 }
             }
-            ods_log_error("In zone file %s: TTL for the record '%s' set to %d", zone->name, str, ldns_rr_ttl(rrset->rrs[0].rr));
+            ods_log_error("In zone file %s: TTL for the record '%s' set to %d", zone->name, str, ttl_rrset);
             LDNS_FREE(str);
-            ldns_rr_set_ttl(rr,ldns_rr_ttl(rrset->rrs[0].rr));
+            ldns_rr_set_ttl(rr, ttl_rrset);
         }
     }
     /* update stats */
